--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,36 @@
 error_log stderr;
 
 events {
-	worker_connections  1024;
+    worker_connections  1024;
 }
 
 http {
-	include      mime.types;
-	default_type application/octet-stream;
-	types_hash_max_size 2048;
+    include      mime.types;
+    default_type application/octet-stream;
+    types_hash_max_size 2048;
 
-	sendfile     on;
+    sendfile     on;
 
-	keepalive_timeout  65;
-	access_log /dev/stdout;
+    keepalive_timeout  65;
+    access_log /dev/stdout;
 
-	server {
-		listen      8888;
-		server_name localhost;
+    server {
+        listen      8888;
+        server_name localhost;
 
-		port_in_redirect off;
+        port_in_redirect off;
 
-		location ~ ^/$ {
-			return 302 /stable;
-		}
+        location ~ ^/$ {
+            return 302 /stable;
+        }
 
-		location / {
-			root  /home/application/current;
-			index index.html index.htm;
-		}
-	}
+        rewrite ^/en/(.*)$ /$1 permanent;
+        rewrite ^/(\d+).(\d+).(\d+)(.*)$ /$1.$2$4 permanent;
+
+        location / {
+            rewrite ^/en/(.*)$ /$1 permanent;
+            root  /home/application/current;
+            index index.html index.htm;
+        }
+    }
 }
