--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,26 @@
+worker_processes 4;
+pid /var/lib/nginx/nginx.pid;
 error_log stderr;
 
 events {
-    worker_connections  1024;
+	worker_connections  1024;
 }
 
 http {
-    include      mime.types;
-    default_type application/octet-stream;
-    types_hash_max_size 2048;
+	include      mime.types;
+	default_type application/octet-stream;
+	types_hash_max_size 2048;
 
-    sendfile     on;
+	sendfile     on;
 
-    keepalive_timeout  65;
-    access_log /dev/stdout;
+	keepalive_timeout  65;
+	access_log /dev/stdout;
 
-    server {
-        listen      8888;
-        server_name localhost;
+	server {
+		listen      8888;
+		server_name localhost;
 
-        port_in_redirect off;
+		port_in_redirect off;
 
         location ~ ^/$ {
             return 302 /stable;
@@ -27,10 +29,9 @@ http {
         rewrite ^/en/(.*)$ /$1 permanent;
         rewrite ^/(\d+).(\d+).(\d+)(.*)$ /$1.$2$4 permanent;
 
-        location / {
-            rewrite ^/en/(.*)$ /$1 permanent;
-            root  /home/application/current;
-            index index.html index.htm;
-        }
-    }
+		location / {
+			root  /home/application/current;
+			index index.html index.htm;
+		}
+	}
 }
