fix nginx rule to rewrite branch

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,12 +22,12 @@ http {
 
 		port_in_redirect off;
 
-        location ~ ^/$ {
-            return 302 /stable;
-        }
+		location ~ ^/$ {
+			return 302 /stable;
+		}
 
-        rewrite ^/en/(.*)$ /$1 permanent;
-        rewrite ^/(\d+).(\d+).(\d+)(.*)$ /$1.$2$4 permanent;
+		rewrite ^/en/(.*)$ /$1 permanent;
+		rewrite ^/([^-]+)-.*$ /$1/ permanent;
 
 		location / {
 			root  /home/application/current;
