fix regex for remove rc suffix versions

--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
 		}
 
 		rewrite ^/en/(.*)$ /$1 permanent;
-		rewrite ^\/([^-]+)(-[^\/]+)?\/(.*)?$ /$1/$3 permanent;
+		rewrite ^/([^-]+)-rc[^/]+/(.*)?$ /$1/$2 permanent;
 
 		location / {
 			root  /home/application/current;
