--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 mkdocs = "^1.4.3"
 mkdocs-material = "^9.1.17"
+pymdown-extensions = "^10.0.1"
 
 [build-system]
 requires = ["poetry-core"]
