Add docs to install on minikube

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
 - Getting started:
   - Overview: ./getting_started/overview.md
   - Architecture: ./getting_started/architecture.md
+  - "Install on minikube": ./getting_started/install_minikube.md
 - User guides:
   - Install client: ./user_guides/install_client.md
   - App deploy:
