--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
   - App deploy:
     - Using Dockerfile: ./user_guides/deploy_using_dockerfile.md
 - Admin guides:
+  - Managing platforms: ./admin_guides/managing_platforms.md
   - Managing teams: ./admin_guides/managing_teams.md
 - References:
   - 404.md
