Add docs of clusters

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,9 +52,11 @@ nav:
   - App deploy:
     - Using Dockerfile: ./user_guides/deploy_using_dockerfile.md
 - Admin guides:
-  - Managing platforms: ./admin_guides/managing_platforms.md
+  - Managing clusters: ./admin_guides/managing_clusters.md
   - Managing pools: ./admin_guides/managing_pools.md
+  - Managing platforms: ./admin_guides/managing_platforms.md
   - Managing teams: ./admin_guides/managing_teams.md
+
 - References:
   - 404.md
 - Contributing:
