--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,9 @@ nav:
   - Install client: ./user_guides/install_client.md
   - App deploy:
     - Using Dockerfile: ./user_guides/deploy_using_dockerfile.md
+    - GO apps: ./user_guides/deploy_go_apps.md
+    - Python apps: ./user_guides/deploy_python_apps.md
+
 - Admin guides:
   - Managing clusters: ./admin_guides/managing_clusters.md
   - Managing pools: ./admin_guides/managing_pools.md
