Add nodejs guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
     - Using Dockerfile: ./user_guides/deploy_using_dockerfile.md
     - GO apps: ./user_guides/deploy_go_apps.md
     - Python apps: ./user_guides/deploy_python_apps.md
+    - Node.js apps: ./user_guides/deploy_nodejs_apps.md
 
 - Admin guides:
   - Managing clusters: ./admin_guides/managing_clusters.md
