--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
     - Node.js apps: ./user_guides/deploy_nodejs_apps.md
     - React.js apps: ./user_guides/deploy_react_apps.md
   - App configuration:
+    - tsuru.yaml: ./user_guides/tsuru_yaml.md
     - Procfile: ./user_guides/procfile.md
     - Unit states: ./user_guides/unit_states.md
   - Troubleshooting:
